Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section id="about" class="section-padding">
       <div class="container text-center">
         <h2 class="section-title">About Us</h2>
-        <p class="about-text">We are a team of senior partners with extensive experience from leading institutions, including former roles at the Bank of Spain, Santander, CaixaBank, and Binance. Our expertise spans payments, crypto assets, and securities regulation, combining deep industry knowledge with a forward-thinking approach to compliance and innovation in the digital finance space.</p>
+        <p class="about-text">We are a team of senior partners with extensive experience from leading institutions, including former roles at the Bank of Spain, Santander, CaixaBank, and Crypto Exchanges. Our expertise spans payments, crypto assets, and securities regulation, combining deep industry knowledge with a forward-thinking approach to compliance and innovation in the digital finance space.</p>
       </div>
     </section>
 
